# wand

./: .goreleaser.yml  .pdm-python  LICENSE  README.md  build-executables.sh  go.mod  install.sh  main.go  pyproject.toml
.github/workflows/: build.yml
cmd/wand/: Alohomora.go  Obscuro.go  Riddikulus.go  Silencio.go  accio.go  avada-kedavra.go  expecto-patronum.go  expelliarmus.go  geminio.go  gemino.go  legilimens.go  lumos.go  mobiliarbus.go  nox.go  oblivate.go  reducio.go  reparo.go  root.go
pkg/wand/: wand.go
