[project]
name = "HeaderHive"
version = "0.1.0"
description = "A hive mind, suggesting collective intelligence (akin to NLP's processing of language) used to understand and interpret table headers."
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
]
dependencies = [
    "fastText>=0.9.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"
